--- a/compose/latest.yml
+++ b/compose/latest.yml
@@ -4,8 +4,17 @@ api-user:
     - "9000:9000"
   links:
     - postgres
+    - elasticsearch
 
 postgres:
   image: pumgrana-postgres:latest
   volumes:
     - /srv/data/pgsql/test:/var/lib/postgresql/data
+
+elasticsearch:
+  image: pumgrana-elasticsearch:latest
+  environment:
+    ES_HEAP_SIZE: 2g
+  volumes:
+    - /srv/data/elasticsearch/test:/usr/share/elasticsearch/data
+  command: "./bin/elasticsearch -Des.nodes.discovery=false"
